# FollowingVKGuide

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cc  vk_engine.cc  vk_engine.cpp  vk_engine.h  vk_engine.hh  vk_initializers.cc  vk_initializers.cpp  vk_initializers.h  vk_initializers.hh  vk_mesh.cc  vk_mesh.cpp  vk_mesh.h  vk_mesh.hh  vk_types.h  vk_types.hh
cmake/: imgui.cmake  shaders.cmake
shaders/: default_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert  triangle.vert.spv  triangle_colored.vert
source/: main.cc
source/engine/common/: types.hh
source/engine/initializers/: initializers.cc  initializers.hh
source/engine/mesh/: mesh.cc  mesh.hh
source/engine/textures/: textures.cc  textures.hh
source/engine/vulkan/: engine.cc  engine.hh
source/ui/: engine_ui.cc
